# pydsview

./: .gitignore  .gitmodules  BINARIES.md  README.md  build_linux.sh  build_windows.ps1  pyproject.toml  setup.py
dsview_src/: CMakeLists_libonly.txt
examples/: basic_capture.py  full_example.py
pydsview/: __init__.py  constants.py  core.py  exceptions.py  lib.py  structs.py
